Fixed logo vertical alignment, fixed thumbs scrolling out of view

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -82,7 +82,7 @@
     -ms-transform: translate3d(0, 0, 0);
     -o-transform: translate3d(0, 0, 0);
     transform: translate3d(0, 0, 0);
-    position: relative;
+    position: static;
     list-style: none;
     white-space: nowrap; }
   .carousel .thumb {
