--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,7 +25,7 @@
   width: auto;
   margin: auto auto;
 }
-.carousel-root .carousel.carousel-slider .thumbs.animated {
+.carousel-root .carousel .thumbs.animated {
   transform: translate3d(0px, 0px, 0px) !important;
 }
 @screen sm {
